# robotics

./: .gitignore  Makefile
probabilistic_robotics/: Makefile
probabilistic_robotics/src/base/constants/: constants.cpp  constants.hpp
probabilistic_robotics/src/base/math/: matrix.cpp  matrix.hpp
probabilistic_robotics/src/base/random_variable/: get_point.py
probabilistic_robotics/src/kalman_filter/: kalman_filter.cpp  main.cpp
probabilistic_robotics/src/robot/: robot_emulation.cpp
probabilistic_robotics/src/visualization/: visualization.cpp  visualization.hpp  visualization_info.cpp  visualization_info.hpp  visualization_opencv.cpp  visualization_opencv.hpp
ros2_ws/src/aruco_localization/: CMakeLists.txt  package.xml
ros2_ws/src/aruco_localization/include/aruco_localization/: aruco_localization_node.hpp
ros2_ws/src/aruco_localization/resources/: aruco_localization.yaml  cameraCalib.txt  config.rviz
ros2_ws/src/aruco_localization/script/: c.py  create_marker.py
ros2_ws/src/aruco_localization/src/: aruco_localization_node.cpp  main.cpp
ros2_ws/src/aruco_localization/urdf/: bloch_blue.urdf  block-green.urdf  block-red.urdf  robot.urdf  world.urdf
ros2_ws/src/detect_aruco/: CMakeLists.txt  package.xml
ros2_ws/src/detect_aruco/launch/: detect_aruco_launch.py
ros2_ws/src/detect_aruco/msg/: MarkerInImage.msg  MarkersInImage.msg
ros2_ws/src/detect_aruco/src/: detect_aruco.cpp  estimation_robot_position.cpp  image_publisher.cpp
src/base/constants/: constants.cpp  constants.hpp
src/base/math/: matrix.cpp  matrix.hpp
src/base/random_variable/: normal_distribution.cpp  normal_distribution.hpp
src/base/regulator/: regulator.cpp  regulator.hpp
src/kalman_filter/: kalman_filter.cpp  kalman_filter.hpp  main.cpp
src/robot/: robot.cpp  robot.hpp  robot_emulation.cpp  robot_emulation.hpp
src/visualization/: kalman_filter_visualization.cpp  kalman_filter_visualization.hpp
